--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,5 +1,26 @@
-<form method="post">
-	{% csrf_token %}
-	<input name="name" />
-	<input type="submit" value="Отправить" />
-</form>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+            <div class="card-body">
+                <p class="card-text">
+                    Напишите Нам
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token %}
+                    <p>Ваше имя* <input class="form-control" name="name"/></p>
+                    <p>Ваш емайл* <input class="form-control" name="email"/></p>
+                    <p>Тема сообщения: <input class="form-control" name="subjects"/></p>
+                    <p>Текст сообщения: <textarea class="form-control" name="message"></textarea></p>
+                    <p><input id="submit" value="Отправить" type="submit"/></p>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock %}
