--- a/templates/includes/inc_my_home_menu.html
+++ b/templates/includes/inc_my_home_menu.html
@@ -2,5 +2,7 @@
     <h4 class="text-white">Меню</h4>
     <ul class="list-unstiled">
         <li><a href="{% url 'my_home:index' %}" class="text-while">Главная</a></li>
+        <li><a href="{% url 'my_home:product' %}" class="text-while">Продукты</a></li>
+        <li><a href="{% url 'my_home:contacts' %}" class="text-while">Контакты</a></li>
     </ul>
 </div>
