--- a/my_home/templates/includes/inc_my_home_menu.html
+++ b/my_home/templates/includes/inc_my_home_menu.html
@@ -3,6 +3,7 @@
     <ul class="list-unstiled">
         <li><a href="{% url 'my_home:index' %}" class="text-while">Главная</a></li>
         <li><a href="{% url 'my_home:product' %}" class="text-while">Продукты</a></li>
+        <li><a href="{% url 'my_blog:list' %}" class="text-while">Блог</a></li>
         <li><a href="{% url 'my_home:contacts' %}" class="text-while">Контакты</a></li>
     </ul>
 </div>
