--- a/my_blog/templates/my_blog/blog_detail.html
+++ b/my_blog/templates/my_blog/blog_detail.html
@@ -7,7 +7,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="card-title">
-                            Блог "{{ object|title }}"
+                            Блог "{{ object|title }}" ({{ object.slug }})
                         </h3>
                     </div>
                     <div class="card-body">
@@ -15,7 +15,9 @@
                             {{ object.description }}
                         </p>
                     </div>
-                    <div class="card-footer"></div>
+                    <div class="card-footer">
+                        Просмотры: {{ object.blog_views }}
+                    </div>
                 </div>
             </div>
         </div>
