--- a/my_home/templates/contacts.html
+++ b/my_home/templates/contacts.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'my_home/base.html' %}
 {% block content %}
     <div class="col-md-4">
         <div class="card mb-4 box-shadow">
