--- a/my_home/templates/includes/inc_my_home_menu.html
+++ b/my_home/templates/includes/inc_my_home_menu.html
@@ -1,8 +1,8 @@
 <div class="col-sm-4 offset-md-1 py-4">
     <h4 class="text-white">Меню</h4>
     <ul class="list-unstiled">
-        <li><a href="{% url 'my_home:index' %}" class="text-while">Главная</a></li>
-        <li><a href="{% url 'my_home:product' %}" class="text-while">Продукты</a></li>
+        <li><a href="{% url 'my_home:view' %}" class="text-while">Главная</a></li>
+        <li><a href="{% url 'my_home:list' %}" class="text-while">Продукты</a></li>
         <li><a href="{% url 'my_blog:list' %}" class="text-while">Блог</a></li>
         <li><a href="{% url 'my_home:contacts' %}" class="text-while">Контакты</a></li>
     </ul>
