--- a/my_home/templates/my_home/product_list.html
+++ b/my_home/templates/my_home/product_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'my_home/base.html' %}
 {% load filter %}
 {% block content %}
     {% for object in object_list %}
