--- a/my_home/templates/includes/inc_my_home_menu.html
+++ b/my_home/templates/includes/inc_my_home_menu.html
@@ -4,6 +4,6 @@
         <li><a href="{% url 'my_home:view' %}" class="text-while">Главная</a></li>
         <li><a href="{% url 'my_home:list' %}" class="text-while">Продукты</a></li>
         <li><a href="{% url 'my_blog:list' %}" class="text-while">Блог</a></li>
-        <li><a href="{% url 'my_home:contacts' %}" class="text-while">Контакты</a></li>
+        <li><a href="{% url 'my_home:contact' %}" class="text-while">Контакты</a></li>
     </ul>
 </div>
