--- a/my_home/templates/includes/inc_my_home_menu.html
+++ b/my_home/templates/includes/inc_my_home_menu.html
@@ -2,8 +2,9 @@
     <h4 class="text-white">Меню</h4>
     <ul class="list-unstiled">
         <li><a href="{% url 'my_home:view' %}" class="text-while">Главная</a></li>
-        <li><a href="{% url 'my_home:list' %}" class="text-while">Продукты</a></li>
+        <li><a href="{% url 'my_home:product' %}" class="text-while">Продукты</a></li>
         <li><a href="{% url 'my_blog:list' %}" class="text-while">Блог</a></li>
         <li><a href="{% url 'my_home:contact' %}" class="text-while">Контакты</a></li>
+        <li><a href="http://127.0.0.1:8000/admin/" class="text-white">Админка</a></li>
     </ul>
 </div>
