--- a/my_home/templates/my_home/product_list.html
+++ b/my_home/templates/my_home/product_list.html
@@ -2,18 +2,28 @@
 {% load filter %}
 {% block content %}
     {% for object in object_list %}
-        <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-                <img src="{{ object.image.url|mediapath }}" width="" height="200" alt="#"/>
+        <div class="col-md-6">
+            <div class="card mb-6 box-shadow">
+                <img src="{{ object.image.url }}" width="" height="200" alt="#"/>
                 <div class="card-body">
                     <p class="card-text">{{ object }}</p>
+
+                    {% for pr in object.version_set.all %}
+                    {% if pr.is_active %}
+                        <p class="text">Версия: {{ pr.version }}</p>
+
+                    {% endif %}
+                {% endfor %}
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Открыть</button>
+                            <a href="{% url 'my_home:product_detail' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                        <a href="{% url 'my_home:product_update' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Редактировать</a>
+                        <a href="{% url 'my_home:product_delete' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Удалить</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     {% endfor %}
+
 {% endblock %}
